# mulle-monitor

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  README.md  RELEASENOTES.md  install  mulle-monitor  mulle-monitor-completion.sh
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh
cola/: description.md.bud  info.md.bud  properties.plist  you-are-here.md.bud
dox/: Makefile  mulle-monitor-overview.dot
dox/reference/: TODO.md  callback.md  index.md  run.md
mulle-project/: formula-info.sh
src/: mulle-monitor-bash-completion.sh  mulle-monitor-callback.sh  mulle-monitor-process.sh  mulle-monitor-run.sh  mulle-monitor-task.sh
test/: mock-fswatch  mock-inotifywait  run-test
test/04-callback/: run-test
test/05-task/: run-test
test/10-run-fswatch/: create-src-foo-sh-replay.txt  run-test
test/10-run-inotifywait/: run-test
test/10-run-inotifywait/.mulle/share/monitor/libexec/: hello-task.sh
tests/: run-test
tests/04-callback/: run-test
tests/05-task/: run-test
tests/05-task/.mulle-monitor/libexec/: foo-task.sh
